# prodtime

./: .gitignore  README.md  pyproject.toml
src/prodtime/: cli.py
