[project]
name = "prodtime"
version = "0.1.1"
description = "`prodtime` is a cross-platform command-line productivity timer for developers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
prodtime = "prodtime.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
